--- a/.eslintrc
+++ b/.eslintrc
@@ -41,7 +41,6 @@
     "vue/no-v-html": "off",
     "vue/max-attributes-per-line": "off",
     "vue/singleline-html-element-content-newline": "off",
-    "vue/html-self-closing": "off",
-
+    "vue/html-self-closing": "off"
   }
 }
