--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-vue": "^7.12.1",
     "prettier": "^2.3.2",
+    "sass": "^1.35.1",
     "typescript": "^4.3.5",
     "vite": "^2.3.8",
     "vue-tsc": "^0.2.0"
